--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,14 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
+    <color name="common_red">#C72828</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="common_yellow">#FFB84D</color>
+    <color name="login_yellow">#FFC46B</color>
+    <color name="slogan">#FFB1B1</color>
+    <color name="background_grey">#F0F0F5</color>
+    <color name="text_color_dark">#3D3D4D</color>
+    <color name="text_color_categories_item_title">#6C6C80</color>
+    <color name="common_green">#39B100</color>
+    <color name="description_text_color">#3D3D4D</color>
 </resources>
