--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,9 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.BasicAndroidSetup" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.GoRestaurant" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
+        <item name="colorPrimary">@color/common_red</item>
+        <item name="colorPrimaryVariant">@color/common_red</item>
         <item name="colorOnPrimary">@color/white</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_200</item>
@@ -14,12 +14,12 @@
         <!-- Customize your theme here. -->
     </style>
 
-    <style name="Theme.BasicAndroidSetup.NoActionBar">
+    <style name="Theme.GoRestaurant.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
 
-    <style name="Theme.BasicAndroidSetup.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+    <style name="Theme.GoRestaurant.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
-    <style name="Theme.BasicAndroidSetup.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+    <style name="Theme.GoRestaurant.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 </resources>
