--- a/app/src/main/res/layout/fragment_list.xml
+++ b/app/src/main/res/layout/fragment_list.xml
@@ -108,11 +108,12 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/RVDishes"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:paddingBottom="50dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/TVDishes"
         tools:itemCount="6"
-        android:paddingBottom="50dp"
         tools:listitem="@layout/dishes_item" />
 </androidx.constraintlayout.widget.ConstraintLayout>
