--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,13 +3,23 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/ListFragment">
+    app:startDestination="@id/listFragment">
 
     <fragment
-        android:id="@+id/ListFragment"
+        android:id="@+id/listFragment"
         android:name="com.vitorhr.gorestaurant.ui.list.ListFragment"
         android:label="@string/second_fragment_label"
-        tools:layout="@layout/fragment_list">
+        tools:layout="@layout/fragment_list"/>
 
-    </fragment>
+    <fragment
+        android:id="@+id/ordersFragment"
+        android:name="com.vitorhr.gorestaurant.ui.orders.OrdersFragment"
+        android:label="Orders Fragment"
+        tools:layout="@layout/fragment_orders"/>
+
+    <fragment
+        android:id="@+id/favoritesFragment"
+        android:name="com.vitorhr.gorestaurant.ui.favorites.FavoritesFragment"
+        android:label="Favorites Fragment"
+        tools:layout="@layout/fragment_favorites"/>
 </navigation>
